--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     
   </head>
 
-  <body ng-init="data='x'">
+<body>
 <div multiplication-table x="5" y="5">
   {{ $parent.multiplication.value }}
 </div>
-<script type="text/javascript" src="//code.angularjs.org/1.3.6/angular.js"></script>
-<script src="multiplication-app.js"></script>
+<script type="text/javascript" src="angular.js"></script>
+<script type="text/javascript" src="multiplication-app.js"></script>
   </body>
 
 </html>
